tests/interpreter/errors/index_not_integer.mochi
let xs = [1,2,3]
let i: any = "one"
print(xs[i])
